--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
 	<head>
-		<title>Random Generated Grid - Web Demo</title>
+		<title>trivia test</title>
 		<script type="text/javascript" src="processing.js"></script>
     <body>
     <canvas data-processing-sources="TRIVIA.pde"></canvas>
