--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>trivia test</title>
 		<script type="text/javascript" src="processing.js"></script>
     <body>
+<h1>Canadian Trivia by Kevin Lu</h1>
     <canvas data-processing-sources="TRIVIA.pde"></canvas>
 	</body>
 </html>
