--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
 	<head>
-		<title>trivia test</title>
+		<title>Canadian Trivia</title>
 		<script type="text/javascript" src="processing.js"></script>
     <body>
 <h1>Canadian Trivia by Kevin Lu</h1>
